# Auraflux-Core

./: README.md  pyproject.toml  requirements.txt
src/auraflux_core/: agents.py
src/auraflux_core/agents/: base_agent.py
src/auraflux_core/agents/knowledge/: curation.py  retrieval.py  synthesis.py
src/auraflux_core/canvases/: agents.py  schemas.py  strategies.py  tools.py
src/auraflux_core/core/agents/: base_agent.py  generic_agent.py
src/auraflux_core/core/clients/: client_manager.py
src/auraflux_core/core/clients/handlers/: base_handler.py  gemini_handler.py  openai_handler.py  vllm_handler.py
src/auraflux_core/core/configs/: logging_config.py  settings.py
src/auraflux_core/core/orchestrators/: base.py  state.py
src/auraflux_core/core/orchestrators/strategies/: base.py
src/auraflux_core/core/schemas/: agents.py  clients.py  messages.py  tools.py
src/auraflux_core/core/tools/: base_tool.py  file_reader.py
src/auraflux_core/knowledge/: agents.py  schemas.py  tools.py
src/auraflux_core/schemas/: agents.py
