[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auraflux-core"
version = "0.1.0"
authors = [
    { name = "Scott Huang", email = "shangyuhuang@gmail.com" },
]
description = "The core AI agent package for the Auraflux project, built to solve AI knowledge fragmentation."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-genai==1.64.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "openai==2.23.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pygraphviz==1.14"
]

[project.urls]
Homepage = "https://github.com/solarfresh/Auraflux-Core"
Issues = "https://github.com/solarfresh/Auraflux-Core/issues"